<resources>
    <string name="app_name">SanaPlus</string>
    <string name="action_settings">Settings</string>
    <string name="balance">Balance</string>
    <string name="status">Status</string>
    <string name="my_account">My Account</string>
    <string name="speed">Speed</string>
    <string name="test">test</string>
    <string name="datestop">Paid to</string>
    <string name="credit">Credit</string>
    <string name="menu_internet">Internet</string>
    <string name="menu_tv">TV</string>
    <string name="menu_other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SummaAll">Monthly</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
</resources>