<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:padding="8dp"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="@dimen/card_size"
            android:layout_height="@dimen/card_size"
            android:layout_margin="5dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/BalanceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="16sp"
                    android:text="@string/balance"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tVBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="sans-serif-black"
                    android:text="tVBalance"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="@dimen/card_size"
            android:layout_height="@dimen/card_size"
            android:layout_margin="5dp"
            android:padding="20dp">


            <TextView
                android:id="@+id/StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:text="@string/status"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="sans-serif-black"
                android:text="tVStatus"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="@dimen/card_size"
            android:layout_height="@dimen/card_size"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/SpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:text="@string/speed"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="sans-serif-black"
                android:text="tVSpeed"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="@dimen/card_size"
            android:layout_height="@dimen/card_size"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/DateStopText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:text="@string/datestop"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVDateStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="sans-serif-black"
                android:text="tVDateStop"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="@dimen/card_size"
            android:layout_height="@dimen/card_size"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tVCreditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:text="@string/credit"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="sans-serif-black"
                android:text="tVCredit"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="@dimen/card_size"
            android:layout_height="@dimen/card_size"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tVSummaAllText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:text="@string/SummaAll"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVSummaAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="sans-serif-black"
                android:text="tVSummaAll"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.flexbox.FlexboxLayout>


</androidx.constraintlayout.widget.ConstraintLayout>